fix: remove shift

--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,8 @@ video {
   height: min(100vw, 100vh);
 }
 
-#prediction {
+#prediction,
+#facing-mode {
   display: none;
 }
 #lemon-percentage {
